refactored and combined code, pep8'd most of the source, formatted type ahead, and created helper files

--- a/code/webapp/static/main.css
+++ b/code/webapp/static/main.css
@@ -7,6 +7,8 @@ body {
 	background-image: url("kamloops-map.png");
 	background-repeat: no-repeat;
 	background-position: center;
+	background-color: #444;
+	color: white;
 	padding: 0px;
 	margin: 4.2em 0 3em 0;
 	font-size: 90%;
