--- a/code/webapp/templates/emailconfirm.html
+++ b/code/webapp/templates/emailconfirm.html
@@ -1,4 +1,6 @@
 <p>Thank you for signing up for Kamloops garbage day notifications. Please follow this link to activate your account:</p>
 <p><a href="{{ confirm_url }}">{{ confirm_url }}</a></p>
 <br>
+<p>By clicking on this link, you are subscribing to get a weekly garbage day email, the day before your normal garbage collection date.</p>
+<br><br>
 <p>If you did not sign up for this, you can ignore this email.</p>
