--- a/code/webapp/templates/alreadyused.html
+++ b/code/webapp/templates/alreadyused.html
@@ -1,21 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <title>G-Day</title>
-    <link href="http://getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="http://getbootstrap.com/examples/jumbotron-narrow/jumbotron-narrow.css" rel="stylesheet">
-
-</head>
-
-<body>
-
-    <div class="container">
-        <div class="header">
-            <h3 class="text-muted">Kamloops G-Day</h3>
-        </div>
-
-        <div class="jumbotron" style="background-image: url(../static/images/kamloops.jpg); background-size: cover;">
+{% extends "layout.html" %}
+{% block content %}
             <h2 style="color:white;">Email Already Registered</h2>
             <p class="lead"></p>
             <p><a class="btn btn-lg btn-success" href="/showSignUp" role="banner">Go Back</a></p>
@@ -23,11 +7,4 @@
 	</div>
 
         <div> <br><br><br><br></div>
-<footer class="footer">
-            <p>&copy; Legal Stuff 2015</p>
-        </footer>
-
-    </div>
-</body>
-
-</html>
+{% endblock %}
